# starcraft-II-bot

./: Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
docs/: conf.py  index.rst
src/: Bot.py  Build.py  Planer.py  ProductionQueue.py  QueueItem.py  WorkerManager.py  bot.py  build.py  manager.py  unit_tag.py  worker_manager.py
src/HeatMaps/: DangerMap.py  DefendedAreaMap.py  danger_map.py  defended_area_map.py
src/Helper/: time_to_travel_map.py
src/Helpers/: gas_field.py  mineral_field.py  time_to_travel.py
src/Managers/: ArmyManager.py  WorkerManager.py  army_manager.py  attack_manager.py  manager.py  scouting_manager.py  worker_manager.py
src/Other/: gas_field.py
src/Planners/: build.py  planner.py
